# No1Joon.github.io

./: .gitignore  CLAUDE.md  Gemfile  Tasks.md  _config.yml  index.html  package-lock.json  package.json  resume.md  robots.txt
.github/: CODEOWNERS  dependabot.yml
_data/: categories.yml
_layouts/: default.html  post.html  resume.html
_posts/: 2026-04-06-backend.md  2026-04-06-database.md  2026-04-06-design-ui.md  2026-04-06-dev-tools.md  2026-04-06-frontend.md  2026-04-06-gcp-sdk.md  2026-04-06-infra-devops.md  2026-04-06-realtime-communication.md  2026-04-08-harness-01-overview.md  2026-04-08-harness-02-setup.md  2026-04-08-harness-03-pipeline.md  2026-04-08-harness-04-advanced.md  2026-04-15-argocd-gitops-02-architecture.md  2026-04-15-argocd-gitops-03-sync.md  2026-04-15-github-actions-01-overview.md  2026-04-15-github-actions-02-pipeline.md  2026-04-15-github-actions-overview.md  2026-04-15-jenkins-01-overview.md  2026-04-20-aws-02-network.md  2026-04-20-aws-03-compute.md  2026-04-20-aws-04-storage.md  2026-04-20-aws-05-serverless.md  2026-04-20-azure-02-aks.md  2026-04-20-docker-01-image.md  2026-04-20-gcp-04-data.md  2026-04-20-helm-01-overview.md  2026-04-20-helm-02-patterns.md  2026-04-20-helm-03-distribution.md  2026-04-20-kubernetes-03-networking.md  (+5 more)
api/: .dockerignore  .env.example  .gcloudignore  CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml
api/app/: config.py  db.py  deps.py  main.py
api/app/routers/: admin.py  comments.py  health.py
api/app/schemas/: admin.py  comment.py
api/app/security/: admin_auth.py  headers.py  turnstile.py
(+113 files in other folders)
